@@ -1,23 +1,30 @@
 package org.example.githubfiles.controller;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.ExampleObject;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.persistence.EntityManager;
+import org.example.githubfiles.dto.*;
 import org.example.githubfiles.repository.RepositoryRepository;
 import org.example.githubfiles.repository.SessionRepository;
-import org.example.githubfiles.service.OllamaService;
 import org.example.githubfiles.model.*;
 import org.example.githubfiles.service.RepositoryService;
+import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.autoconfigure.info.ProjectInfoProperties;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.example.githubfiles.service.FileService;
 import org.example.githubfiles.service.GithubService;
-import org.springframework.web.server.ResponseStatusException;
 import org.example.githubfiles.repository.FileRepository;
+import jakarta.validation.Valid;
+import org.example.githubfiles.config.*;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
+@Tag(name = "Repository Controller", description = "Endpoints for importing, updating, and checking GitHub repositories")
 @CrossOrigin(origins = "http://localhost:5173")
 @RestController
 @RequestMapping("/api/repositories")
@@ -26,6 +33,8 @@ public class RepositoryController {
 
     private final RepositoryService repositoryService;
 
+    @Autowired
+    private ModelMapper modelMapper;
     @Autowired
     private RepositoryRepository repositoryRepository;
     @Autowired
@@ -43,76 +52,109 @@ public class RepositoryController {
         this.repositoryService = repositoryService;
     }
 
+    @Operation(
+            summary = "Import a repository",
+            description = "Imports a GitHub repository and its source files into the system",
+            responses = {
+                    @ApiResponse(
+                            responseCode = "200",
+                            description = "Repository and files saved successfully",
+                            content = @Content(schema = @Schema(implementation = ApiResponseDto.class),
+                                    examples = @ExampleObject(value = """
+                    {
+                      "timestamp": "2025-07-15T22:50:23.317Z",
+                      "status": 200,
+                      "success": true,
+                      "message": "Repository and files saved successfully."
+                    }
+                """))
+                    )
+            }
+    )
     @PostMapping("/import")
-    public ResponseEntity<String> analyzeRepository(
-            @RequestParam String owner,
-            @RequestParam String repo,
-            @RequestParam String branch) {
-
-        try {
-            repositoryService.saveRepositoryAndFiles(owner, repo, branch);
-            return ResponseEntity.ok("Repository and files saved successfully.");
-        } catch (Exception e) {
-            return ResponseEntity.status(500).body("Error: " + e.getMessage());
-        }
+    public ResponseEntity<ApiResponseDto> analyzeRepository(@RequestBody @Valid RepositoryImportDto request) {
+        Repository repository = modelMapper.map(request, Repository.class);
+        repositoryService.saveRepositoryAndFiles(repository);
+        return ResponseEntity.ok(ApiResponseDto.success("Repository and files saved successfully."));
     }
 
+    @Operation(
+            summary = "Get all loaded repositories",
+            description = "Returns a list of all repositories that have been imported into the system",
+            responses = {
+                    @ApiResponse(responseCode = "200", description = "List of loaded repositories", content = @Content(mediaType = "application/json", schema = @Schema(implementation = RepositoryLoadedDto.class)))
+            }
+    )
     @GetMapping("/loaded")
-    public List<Map<String, Object>> getLoadedRepositories() {
+    public List<RepositoryLoadedDto> getLoadedRepositories() {
         List<Repository> repos = repositoryRepository.findAll();
 
-        return repos.stream().map(repo -> {
-            Map<String, Object> map = new HashMap<>();
-            map.put("id", repo.getId());
-            map.put("username", repo.getUserName());
-            map.put("repo", repo.getRepoName());
-            map.put("branch", repo.getBranchName());
-
-            boolean hasAnalysis = sessionRepository.existsByRepository(repo);
-            map.put("hasAnalysis", hasAnalysis);
-
-            return map;
-        }).collect(Collectors.toList());
+        return repos.stream()
+                .map(repo -> {
+                    RepositoryLoadedDto dto = modelMapper.map(repo, RepositoryLoadedDto.class);
+                    dto.setHasAnalysis(sessionRepository.existsByRepository(repo));
+                    return dto;
+                })
+                .toList();
     }
 
-    @PostMapping("/has-any-changed")
-    public List<Map<String, Object>> checkAllRepositoriesForChanges() {
-        fileService.checkAndMarkOutdatedRepositories();
 
+    @Operation(
+            summary = "Check which repositories have changed",
+            description = "Checks all repositories in the system and marks them as outdated if any changes are detected",
+            responses = {
+                    @ApiResponse(responseCode = "200", description = "List of repositories with change status", content = @Content(mediaType = "application/json", schema = @Schema(implementation = RepositoryChangeStatusDto.class)))
+            }
+    )
+    @GetMapping("/has-any-changed")
+    public List<RepositoryChangeStatusDto> checkAllRepositoriesForChanges() {
+        fileService.checkAndMarkOutdatedRepositories();
         entityManager.clear();
 
         List<Repository> allRepos = repositoryRepository.findAll();
-        List<Map<String, Object>> results = new ArrayList<>();
 
-        for (Repository repo : allRepos) {
-            Map<String, Object> result = new HashMap<>();
-            result.put("owner", repo.getUserName());
-            result.put("repo", repo.getRepoName());
-            result.put("branch", repo.getBranchName());
-            result.put("changed", !repo.getUpToDate());// true = değişmiş, false = güncel
-            //System.out.println(repo.getUpToDate());
-            results.add(result);
-        }
-        return results;
+        return allRepos.stream().map(repo -> {
+            RepositoryChangeStatusDto dto = modelMapper.map(repo, RepositoryChangeStatusDto.class);
+            dto.setUpToDate(repo.getUpToDate());
+            return dto;
+        }).toList();
     }
 
+    @Operation(
+            summary = "Update an existing repository",
+            description = "Fetches the latest files for a given repository and branch, replacing old entries in the system",
+            responses = {
+                    @ApiResponse(
+                            responseCode = "200",
+                            description = "Repository updated successfully",
+                            content = @Content(
+                                    schema = @Schema(implementation = ApiResponseDto.class),
+                                    examples = @ExampleObject(value = """
+                {
+                  "timestamp": "2025-07-15T22:55:10.123Z",
+                  "status": 200,
+                  "success": true,
+                  "message": "Repository updated successfully."
+                }
+                """)
+                            )
+                    )
+            }
+    )
     @PostMapping("/update")
-    public ResponseEntity<String> updateRepository(@RequestBody Map<String, String> repoInfo) {
-        String owner = repoInfo.get("owner");
-        String repo = repoInfo.get("repo");
-        String branch = repoInfo.get("branch");
+    public ResponseEntity<ApiResponseDto> updateRepository(@RequestBody @Valid RepositoryUpdateRequestDto dto) {
+        Repository dtoAsEntity = modelMapper.map(dto, Repository.class);
 
-        Optional<Repository> repoOpt = repositoryRepository.findByUserNameAndRepoNameAndBranchName(owner, repo, branch);
-        if (repoOpt.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Repository not found.");
-        }
+        Optional<Repository> repoOpt = repositoryRepository.findByUserNameAndRepoNameAndBranchName(dtoAsEntity.getUserName(), dtoAsEntity.getRepoName(), dtoAsEntity.getBranchName());
+        //if (repoOpt.isEmpty()) {
+        //    return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Repository not found.");
+        //}
 
         Repository repository = repoOpt.get();
 
         fileRepository.deactivateAllByRepositoryId(repository.getId());
 
-        List<File> newFiles = githubService.fetchFilesFromRepo(owner, repo, branch);
-
+        List<File> newFiles = githubService.fetchFilesFromRepo(dtoAsEntity);
         for (File file : newFiles) {
             file.setRepository(repository);
             file.setActive(true);
@@ -122,6 +164,6 @@ public class RepositoryController {
         repository.setUpToDate(true);
         repositoryRepository.save(repository);
 
-        return ResponseEntity.ok("Repository updated successfully.");
+        return ResponseEntity.ok(ApiResponseDto.success("Repository updated successfully."));
     }
 }
